@@ -99,21 +99,6 @@ class PaginatorTest extends PHPUnit_Framework_TestCase
  		$this->assertEquals($page->current, 50);
  		$this->assertEquals($page->total_pages, 218);
 
- 		//Last Page
- 		/*$paginator->setCurrentPage(219);
-
- 		$page = $paginator->getPaginate();
- 		$this->assertEquals(get_class($page), 'stdClass');
-
- 		$this->assertEquals(count($page->items), 1);
-
- 		$this->assertEquals($page->before, 218);
- 		$this->assertEquals((int) $page->next, 219);
- 		$this->assertEquals($page->last, 219);
-
- 		$this->assertEquals($page->current, 219);
- 		$this->assertEquals($page->total_pages, 219);*/
-
 	}
 
 	public function testModelBindPaginator()
@@ -142,25 +127,115 @@ class PaginatorTest extends PHPUnit_Framework_TestCase
 
  		$this->assertEquals($page->before, 1);
  		$this->assertEquals($page->next, 2);
- 		$this->assertEquals($page->last, 3);
+ 		$this->assertEquals($page->last, 4);
 
  		$this->assertEquals($page->current, 1);
- 		$this->assertEquals($page->total_pages, 3);
+ 		$this->assertEquals($page->total_pages, 4);
 
  		//Middle Page
- 		$paginator->setCurrentPage(50);
+ 		$paginator->setCurrentPage(2);
 
  		$page = $paginator->getPaginate();
  		$this->assertEquals(get_class($page), 'stdClass');
 
  		$this->assertEquals(count($page->items), 10);
 
- 		$this->assertEquals($page->before, 49);
- 		$this->assertEquals($page->next, 51);
- 		$this->assertEquals($page->last, 218);
+ 		$this->assertEquals($page->before, 1);
+ 		$this->assertEquals($page->next, 3);
+ 		$this->assertEquals($page->last, 4);
 
- 		$this->assertEquals($page->current, 50);
- 		$this->assertEquals($page->total_pages, 218);
+ 		$this->assertEquals($page->current, 2);
+ 		$this->assertEquals($page->total_pages, 4);
+
+ 	}
+
+	public function testModelPaginator8()
+	{
+
+		$this->_loadDI();
+
+		$personnes = Personnes::find(array(
+			"limit" => "8"
+        ));
+
+		$paginator = new Phalcon\Paginator\Adapter\Model(array(
+ 			'data' => $personnes,
+ 			'limit' => 5,
+ 			'page' => 1
+ 		));
+
+ 		//First Page
+ 		$page = $paginator->getPaginate();
+ 		$this->assertEquals(get_class($page), 'stdClass');
+
+ 		$this->assertEquals(count($page->items), 5);
+
+ 		$this->assertEquals($page->before, 1);
+ 		$this->assertEquals($page->next, 2);
+ 		$this->assertEquals($page->last, 2);
+
+ 		$this->assertEquals($page->current, 1);
+ 		$this->assertEquals($page->total_pages, 2);
+
+ 		//Middle Page
+ 		$paginator->setCurrentPage(2);
+
+ 		$page = $paginator->getPaginate();
+ 		$this->assertEquals(get_class($page), 'stdClass');
+
+ 		$this->assertEquals(count($page->items), 3);
+
+ 		$this->assertEquals($page->before, 1);
+ 		$this->assertEquals($page->next, 2);
+ 		$this->assertEquals($page->last, 2);
+
+ 		$this->assertEquals($page->current, 2);
+ 		$this->assertEquals($page->total_pages, 2);
+
+ 	}
+
+ 	public function testModelPaginator123()
+	{
+
+		$this->_loadDI();
+
+		$personnes = Personnes::find(array(
+			"limit" => "123"
+        ));
+
+		$paginator = new Phalcon\Paginator\Adapter\Model(array(
+ 			'data' => $personnes,
+ 			'limit' => 9,
+ 			'page' => 1
+ 		));
+
+ 		//First Page
+ 		$page = $paginator->getPaginate();
+ 		$this->assertEquals(get_class($page), 'stdClass');
+
+ 		$this->assertEquals(count($page->items), 9);
+
+ 		$this->assertEquals($page->before, 1);
+ 		$this->assertEquals($page->next, 2);
+ 		$this->assertEquals($page->last, 14);
+
+ 		$this->assertEquals($page->current, 1);
+ 		$this->assertEquals($page->total_pages, 14);
+
+ 		//Middle Page
+ 		$paginator->setCurrentPage(7);
+
+ 		$page = $paginator->getPaginate();
+ 		$this->assertEquals(get_class($page), 'stdClass');
+
+ 		$this->assertEquals(count($page->items), 9);
+
+ 		$this->assertEquals($page->before, 6);
+ 		$this->assertEquals($page->next, 8);
+ 		$this->assertEquals($page->last, 14);
+
+ 		$this->assertEquals($page->current, 7);
+ 		$this->assertEquals($page->total_pages, 14);
 
  	}
 
