@@ -152,6 +152,6 @@ try {
 }
 catch(Exception $e){
 	echo $e->getMessage(), PHP_EOL;
-	//echo $e->getTraceAsString(), PHP_EOL;
-	print_r($e->getTrace());
+	echo $e->getTraceAsString(), PHP_EOL;
+	//print_r($e->getTrace());
 }
