@@ -4,6 +4,7 @@
  - Now is possible register a template engine in Phalcon\Mvc\View with an anonymous function
  - Passing 'compileAlways' => true as option for Volt makes that the templates will be always compiled instead of checking if they have changes
  - Now Phalcon\Cache\Backend adapters return false in the "exists" method if the cache has expired
+ - Reduced number of re-executions when using scrollable cursors
 
 0.7.0b1
  - Implemented a fast way to retrieve object's members without add a memory frame
